--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </nav>
     <main>
         <section id="section1">
-            <h2></h2>
-            <p></p>
+            <h2>Github Link</h2>
+            <p>https://github.com/nielpz/</p>
         </section>
         <section id="section2">
             <h2></h2>
