--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <section id="section1">
             <h2>Github Link</h2>
-            <p>https://github.com/nielpz/</p>
+            <a href="https://github.com/nielpz/">Click</a>
         </section>
         <section id="section2">
             <h2></h2>
