--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <a href="https://github.com/nielpz/">Click</a>
         </section>
         <section id="section2">
-            <h2></h2>
-            <p></p>
+            <h2>Tugas</h2>
+            <a href="https://github.com/nielpz/python/blob/main/bisection.py">Click</a>
         </section>
     </main>
     <footer>
