--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Add a viewport meta tag for responsiveness -->
     <title>nielpz - GitHub Pages</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -11,8 +12,8 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#section1">Home</a></li>
-            <li><a href="#section2">About</a></li>
+            <li><a href="#section1">Section 1</a></li>
+            <li><a href="#section2">Section 2</a></li>
         </ul>
     </nav>
     <main>
