--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#section1">Section 1</a></li>
-            <li><a href="#section2">Section 2</a></li>
+            <li><a href="#section1">Home</a></li>
+            <li><a href="#section2">About</a></li>
         </ul>
     </nav>
     <main>
