--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <a href="https://github.com/nielpz/">Click</a>
         </section>
         <section id="section2">
-            <h2>Tugas</h2>
-            <a href="https://github.com/nielpz/python/blob/main/bisection.py">Click</a>
+            <h2>Tugas 11-8-2023</h2>
+            <a href="https://github.com/nielpz/python/blob/main/regulafalsi.py">Click</a>
         </section>
     </main>
     <footer>
