--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
             <a href="https://github.com/nielpz/">Click</a>
         </section>
         <section id="section2">
-            <h2>UTS 15-11-2023</h2>
-            <a href="https://github.com/nielpz/python/blob/main/newtonraphson.py">Click</a>
+            <h2>Tugas 29-11-2023</h2>
+            <h1>cpp (a year ago)</h1>
+            <a href="https://github.com/nielpz/cpp/blob/main/plusminus.cpp">Click</a>
+            <h1>javascript (new)</h1>
+            <a href="https://github.com/nielpz/js/blob/main/plusminus.js">Click</a>
+            <h2>HackerRank</h2>
+            <h1>Link</h1>
+            <a href="https://www.hackerrank.com/profile/nielpz">Click</a>
         </section>
     </main>
     <footer>
