--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="logo">nielpz</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><button id="theme-toggle">Toggle Theme</button></li>
@@ -30,6 +31,18 @@
         <section id="about" class="about">
             <h2>About Me</h2>
             <p>I am a developer with experience in web design, front-end development, and creating efficient, user-friendly applications.</p>
+        </section>
+
+        <section id="skills" class="skills">
+            <h2>Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-card">HTML</div>
+                <div class="skill-card">CSS</div>
+                <div class="skill-card">JavaScript</div>
+                <div class="skill-card">React</div>
+                <div class="skill-card">Python</div>
+                <div class="skill-card">Node.js</div>
+            </div>
         </section>
 
         <section id="projects" class="projects">
@@ -67,6 +80,16 @@
         const themeToggle = document.getElementById('theme-toggle');
         themeToggle.addEventListener('click', () => {
             document.body.classList.toggle('dark-theme');
+        });
+
+        // Add smooth scrolling for anchor links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
         });
     </script>
 
@@ -117,6 +140,16 @@
             text-align: center;
             padding: 2rem 1rem;
             background: #f4f4f4;
+            animation: fadeIn 2s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
         }
 
         body.dark-theme .hero {
@@ -137,10 +170,40 @@
             border-radius: 5px;
         }
 
-        .about, .projects, .contact {
+        .about, .skills, .projects, .contact {
             padding: 2rem 1rem;
             max-width: 1200px;
             margin: 0 auto;
+        }
+
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            gap: 1rem;
+            text-align: center;
+        }
+
+        .skill-card {
+            background: #f4f4f4;
+            padding: 1rem;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            animation: popIn 1s ease-in-out;
+        }
+
+        @keyframes popIn {
+            from {
+                transform: scale(0.9);
+                opacity: 0;
+            }
+            to {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+
+        body.dark-theme .skill-card {
+            background: #444;
         }
 
         .project-grid {
@@ -154,6 +217,18 @@
             padding: 1rem;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            animation: slideIn 1s ease-in-out;
+        }
+
+        @keyframes slideIn {
+            from {
+                transform: translateX(-20px);
+                opacity: 0;
+            }
+            to {
+                transform: translateX(0);
+                opacity: 1;
+            }
         }
 
         body.dark-theme .project-card {
