--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nielpz Portfolio</title>
+    <title>wondrv Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
@@ -13,7 +13,7 @@
     <div id="particle-background"></div>
     <header>
         <nav>
-            <div class="logo">nielpz</div>
+            <div class="logo">wondrv</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -108,12 +108,12 @@
             <h2>Contact Me</h2>
             <p>Feel free to reach out via email or connect on GitHub.</p>
             <a href="mailto:youremail@example.com" class="cta">Email Me</a>
-            <a href="https://github.com/nielpz" target="_blank" class="cta">Visit My GitHub</a>
+            <a href="https://github.com/wondrv" target="_blank" class="cta">Visit My GitHub</a>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 nielpz. All rights reserved.</p>
+        <p>&copy; 2024 wondrv. All rights reserved.</p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
