--- a/index.html
+++ b/index.html
@@ -1170,7 +1170,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <span class="logo-text">wondrv</span>
-                <span class="logo-dot">.</span>
+                <span class="logo-dot"></span>
             </div>
             <ul class="nav-menu" id="nav-menu">
                 <li class="nav-item">
