--- a/index.html
+++ b/index.html
@@ -1380,8 +1380,9 @@
         /* Responsive Design - UPDATED */
         @media (max-width: 1024px) {
             .nav-container {
-                grid-template-columns: auto 1fr auto;
-                gap: 1rem;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
             }
             
             .nav-menu {
@@ -1408,7 +1409,7 @@
         }
 
         @media (max-width: 768px) {
-            .nav-container {
+                .nav-container {
                 display: flex;
                 justify-content: space-between;
                 padding: 0 1rem;
